frontend/test/should_fail/index_exec_node_isInFromIndexFromTo_candidate_mismatch.grg
#using "index_exec_model.gm"

sequence s(e:E, j:double)
{
	{ i:set<Node>=isInNodesFromIndexFromTo(e, fooi, 0, 42) }
}
